<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
            android:id="@+id/item_month_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="2022년 6월"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textColor="#DD2C00"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textColor="#0000ff"
                android:gravity="center"
                android:textSize="18sp"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"
            android:background="#bbb"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_month_day_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"
            android:padding="5dp"
            android:background="#bbb"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/calender_scroll"
            tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/calender_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/calender_list_name"
                    android:textSize="15sp"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" android:layout_marginStart="15dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="3dp"
                    android:background="#bbb"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/schedule_list"/>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>